--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ nix = "0.18.0"
 tokio = { version = "0.2", features = ["full"] }
 maxminddb = "0.14.0"
 futures = "0.3.0"
+ctrlc = { version = "3.1", features = ["termination"] }
