--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "awaki"
+name = "aetheryte"
 version = "0.1.0"
-authors = ["ubuntu"]
+authors = ["Icmeic Jia <bingfeng.web@gmail.com>"]
 edition = "2018"
 license = "GPL-3.0"
 
@@ -12,3 +12,7 @@ tokio = { version = "0.2", features = ["full"] }
 maxminddb = "0.14.0"
 futures = "0.3.0"
 ctrlc = { version = "3.1.7", features = ["termination"] }
+domain = { version = "0.5.3", features = ["bytes"]}
+bytes = "0.5.6"
+# trust-dns-server = { version = "0.19.6" }
+# trust-dns-resolver = { version = "0.19.6" }
