--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ futures = "0.3.0"
 ctrlc = { version = "3.1.7", features = ["termination"] }
 domain = { version = "0.5.3", features = ["bytes"]}
 bytes = "0.5.6"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 # trust-dns-server = { version = "0.19.6" }
 # trust-dns-resolver = { version = "0.19.6" }
