--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . --no-cache --file Dockerfile --tag $IMAGE_NAME --build-arg GITHUB_ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }}
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME --build-arg GITHUB_ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }}
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
