--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ glob = "0.2"
 libc = "0.2"
 maxminddb = "0.17"
 nix = "0.19"
+redis = {version = "0.19", features = ["tokio-comp", "connection-manager"]}
 rustls-native-certs = "0.5"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
